# llzk-nix-pkgs

./: .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
examples/using-mlir/: CMakeLists.txt  default.nix
